--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^4.0.4"
+    "react-router-dom": "^7.1.5",
+    "react-social-login-buttons": "^4.1.0",
+    "react-toastify": "^11.0.3",
+    "tailwindcss": "^4.0.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
